# private-rag-embeddinggemma

./: .gitignore  LICENSE  README.md  pyproject.toml  rag_demo.ipynb  rag_demo.py  requirements.txt
